--- a/frontend/src/assets/scss/config/modern/custom.scss
+++ b/frontend/src/assets/scss/config/modern/custom.scss
@@ -657,6 +657,39 @@ ng-select {
   font-family: "IBM Plex Sans", sans-serif;
 }
 
+/* Collapsed icon alignment parity (Creorx behavior):
+   center icon column at global layout layer, not component overrides. */
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm"] .navbar-menu .navbar-nav .nav-link,
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm-hover"] .navbar-menu:not(:hover) .navbar-nav .nav-link {
+  display: block !important;
+  text-align: center !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm"] .navbar-menu .navbar-nav .nav-link i.icon.nav-icon,
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm-hover"] .navbar-menu:not(:hover) .navbar-nav .nav-link i.icon.nav-icon {
+  display: block !important;
+  width: 1.35rem !important;
+  min-width: 1.35rem !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  text-align: center !important;
+  line-height: 1 !important;
+}
+
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm"] .navbar-menu .navbar-nav .nav-link[data-bs-toggle="collapse"]:after,
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm-hover"] .navbar-menu:not(:hover) .navbar-nav .nav-link[data-bs-toggle="collapse"]:after {
+  display: none !important;
+}
+
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm"] .navbar-menu .navbar-nav .nav-link.active,
+:is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm-hover"] .navbar-menu:not(:hover) .navbar-nav .nav-link.active {
+  border-inline-start: 0 !important;
+}
+
 :is([data-layout="vertical"], [data-layout="semibox"])[data-sidebar-size="sm"] .navbar-menu .navbar-nav .menu-dropdown {
   display: none;
   height: auto !important;
